package ksr.grupa3;

abstract class TextSimilarityMeasure {
   abstract double sim(String s1, String s2);
}